Budak -> Kanak-kanak

--- a/raya-2026.html
+++ b/raya-2026.html
@@ -362,7 +362,7 @@
                                     <button type="button" onclick="updatePax('adult', 1)" class="w-10 h-10 bg-black text-white shadow rounded-full font-bold hover:scale-110 transition">+</button>
                                 </div>
                             </div>
-                            <!-- Budak -->
+                            <!-- Kanak-kanak -->
                             <div class="flex items-center justify-between border-t border-dashed pt-4">
                                 <div>
                                     <p class="font-bold text-lg">Kanak-kanak</p>
